--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
-    <title>POP-QUIZ</title>
+    <title>POP-QUIZ</title> <!--title of the website-->
 </head>
 
 
 <body>
+    <!--header of the document-->
     <header>
     <h1>POP-QUIZ!</h1>
-    <p>Click the Start button to begin.</p>
+    <p>Click the Start button below to begin.</p>
     </header>
-    
-    <div>
-    <button id="start">START</button>
+
+    <!--blank section to provide space between the header and button-->
+    <section>
+    </section>
+
+    <!--start button id's-->
+    <div id="startButtonContainer">
+    <button id="startButton">START</button>
     </div>
+    
+    <!--countdown timer for quiz-->
+    <div id="countdownContainer">
+    <p id="countdownText"><span id="countdownValue">10</span></p>
+    </div>
+
+    <!--questions to put up on the screen when called upon, just put this up so we can use it later-->
+    <div id="questionsContainer">
+    <p id="questions">question 1 remove this text from HTML form when done</p>
+    <p id="answers"></p>
+    </div>
+
+    <!--bringing in the javascript for the html to find-->
     <script src="./Assets/JS/script.js"></script>
+
 </body>
 </html>
