Removed scoreboard for end game button.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <p id="answerElement"></p>
     </div>
 
-    <div id = "scoreboard">
-    <p id="user name"><span></span></p>
+    <div>
+    <p id="endGame">End Quiz</p>
     <p></p>
     </div>
 
