created form id's and inserted them into js,css, and HTML.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <p id="answerElement"></p>
     </div>
 
-    <div>
-    <p id="endGame">End Quiz</p>
+    <div id="formContainer">
+    <p id="formElement"></p>
     <p></p>
     </div>
 
