--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </header>
 
-    <!--blank section to provide space between the header and button-->
+    <!--Form that is used to store score and initals to local storage-->
     <div id="formContainer" class="center-container">
       <p id="formElement"></p>
       <input
